--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,12 @@ repositories {
 dependencies {
     testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    implementation 'com.codeborne:selenide:5.1.0'
+}
+
+
+test{
+    useTestNG(){
+        includeGroups 'smoke'
+    }
 }
