--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,17 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "ru.d10xa:gradle-allure-plugin:0.5.2"
+    }
+}
+
 group 'MyProject'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'ru.d10xa.allure'
 
 sourceCompatibility = 1.8
 
@@ -15,9 +25,24 @@ dependencies {
     implementation 'com.codeborne:selenide:5.1.0'
 }
 
+allure {
+    aspectjweaver = true
+
+    // Choose your test framework.
+    junit = false
+    testNG = true
+    spock = false
+
+    // Choose if you're using Geb for web tests
+    geb = true
+}
 
 test{
     useTestNG(){
-        includeGroups 'smoke'
+        includeGroups 'smoke', 'regression'
+    }
+
+    testLogging {
+        events "PASSED", "FAILED", "SKIPPED"
     }
 }
