--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # Compiled class file
 *.class
-.idea/
-.gradle/
 .bin/
 .out/
+.gradle/
+.idea/
+.target/allure-results/
 
 # Log file
 *.log
@@ -25,3 +26,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/.gradle/
+/build/
+/target/
